# wincred

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: main.rs
