[package]
name = "wincred"
version = "0.1.0"
edition = "2021"
description = "CLI for the Windows Credential Manager, callable from WSL"
license = "MIT"
repository = "https://github.com/vivainio/wincred"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_Console",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
